--- a/imports/ui/Login.html
+++ b/imports/ui/Login.html
@@ -1,7 +1,7 @@
 
 <template name = "login">
-  <div className = "boxed-view">
-      <div className = "boxed-view__box">
+  <div class= "boxed-view">
+      <div class = "boxed-view__box">
         <h1> Short Lnk Login</h1>
         <p>{this.state.count} </p>
         {this.state.error? <p> {this.state.error}</p> : undefined}
