--- a/imports/ui/Signup.html
+++ b/imports/ui/Signup.html
@@ -1,7 +1,7 @@
 <template name = "signup">
 
-  <div className = "boxed-view">
-  <div className = "boxed-view__box">
+  <div class = "boxed-view">
+  <div class = "boxed-view__box">
   <h1> Join Short Lnk</h1>
 
   <p>{this.state.count} </p>
