--- a/imports/ui/PlayersBoard.html
+++ b/imports/ui/PlayersBoard.html
@@ -67,9 +67,13 @@
 
 
 			{{else}}
-			<div class ="item">
-				<p class = "item__message item__message__empty"> Login to see more features</p>
+			<div class = "wrapper">
+				<div class ="item">
+					<p class = "item__message item__message__empty"> Login to see more features</p>
+				</div>
+
 			</div>
+
 		{{/if}}
 
 
