--- a/imports/ui/AddPlayer.html
+++ b/imports/ui/AddPlayer.html
@@ -1,11 +1,9 @@
 <template name = "addPlayerForm">
-
 <div class = "item">
   <form class = "form">
-  <input  class = "form__input" type = "text" name = "playerName" placeholder="Player Name" required />
-  <input type ="text" class = "form__input" name = "playerValue" size = "5" placeholder="Value">
-  <input type = "submit" class ="button" value = "Add Player">
+    <input  class = "form__input" type = "text" name = "playerName" placeholder="Player Name" required />
+    <input type ="text" class = "form__input form__score" name = "playerValue" placeholder="Value">
+    <input type = "submit" class ="button" value = "Add Player">
   </form>
 </div>
-
 </template>
