--- a/imports/ui/Player.html
+++ b/imports/ui/Player.html
@@ -1,25 +1,22 @@
 
 <template name= "Player">
-  <div>
-  <div class = "player">
+    <div class= "player">
+    <div class="player__stats">
+      <h3 class = "player__name"> {name}</h3>
+      <p class = "player__stats">
+      x place - {score} points
+      </p>
+      <span>{createdAt}</span>
+    </div>
 
-  <div class="player__stats">
-  <h3 class = "player__name"> player name</h3>
-  <p class = "player__stats">
-  player stat
-  </p>
-  </div>
-
-  <div class= "player__actions">
-
-  <button class = "button button__round">
-  +1</button>
-  <button class = "button button__round">
-  -1</button>
-  <button class = "button button__round">
-  X</button>
-  </div>
-
-  </div>
-  </div>
+    <div class = "player__actions">
+      <button class = "button button__round add__button" >+
+      <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+      </button>
+      <button class = "button button__round minus__button" >
+      -<i class="fa fa-minus fa-2x" aria-hidden="true"></i></button>
+      <button class = "button button__round delete__button" >
+    x  <i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></button>
+    </div>
+    </div>
 </template>
