--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,10 @@
 <head>
   <title>Blaze-Meteor Leaderboard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="description" content="React Meteor Web Application">
+  <meta name="keywords" content="JavaScript, SCSS, Blaze, Meteor">
+  <meta name="author" content="Asabeneh">
 </head>
 
 <body>
