--- a/imports/ui/TitleBar.html
+++ b/imports/ui/TitleBar.html
@@ -2,7 +2,7 @@
 	  <div class="title-bar">
 	    <div class="wrapper">
 				 <h1>Leader Board</h1>
-				<h2 class = "title-bar__subtitle">Blaze Meteor Leaderboard</h2>
+				<h2 class = "title-bar__subtitle">Blaze Meteor Web Application</h2>
 				{{>loginButtons}}
 	    </div>
 	  </div>
